Label/Value spacing fixed

--- a/webui/controls/static/controls/dashboard.css
+++ b/webui/controls/static/controls/dashboard.css
@@ -55,6 +55,12 @@ p {
     color: #3e4684;
 }
 
+.form-control {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 2rem;
+}
 .form-control input[type=number] {
     padding: .5em 0;
     border: 1px solid #e6e9f9;
